--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chatbox",
   "private": true,
   "dependencies": {
+    "bad-words": "^3.0.4",
     "firebase": "^9.1.3",
     "firebase-functions": "^3.15.7",
     "node-sass": "^6.0.1",
