--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "private": true,
   "dependencies": {
     "bad-words": "^3.0.4",
-    "dotenv": "^10.0.0",
     "firebase": "^9.2.0",
     "firebase-admin": "^10.0.0",
     "firebase-functions": "^3.16.0",
@@ -28,5 +27,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv": "^10.0.0"
   }
 }
