--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "private": true,
   "dependencies": {
     "bad-words": "^3.0.4",
-    "firebase": "^9.3.0",
+    "firebase": "^9.6.0",
     "firebase-admin": "^10.0.0",
     "firebase-functions": "^3.16.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^4.0.1",
+    "react-screen-orientation": "^0.0.4",
     "react-scripts": "4.0.3"
   },
   "scripts": {
